dataset1235/2025-2/805158916/users/867352253/executions/2118643220_2011582555.log
== RUN (2025-09-01 15:43:57)
-- CODE: 
from math import pi
from math import tan
lado = float(input("digite o comprimento do lado:"))
tan_ = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan(pi/6))  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
digite o comprimento do lado:381.92
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
digite o comprimento do lado:194.86
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
digite o comprimento do lado:124.71
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
digite o comprimento do lado:280.59
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
digite o comprimento do lado:70.15
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
digite o comprimento do lado:498.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:29:38)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_15 = 2 - (3**0.5)
apotema = 6 * lado/(2 * tan_15) 
area = 6 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
digite o comprimento do lado:3291.67
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
digite o comprimento do lado:1679.42
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
digite o comprimento do lado:1074.83
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
digite o comprimento do lado:2418.37
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
digite o comprimento do lado:604.59
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
digite o comprimento do lado:4299.32
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:41:39)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_15 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan(pi/6))  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
digite o comprimento do lado:381.92
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
digite o comprimento do lado:194.86
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
digite o comprimento do lado:124.71
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
digite o comprimento do lado:280.59
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
digite o comprimento do lado:70.15
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
digite o comprimento do lado:498.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:27)
-- CODE: 
from math import pi
from math import tan
lado = float(input())
apotema = 3 * lado/(2 * tan(pi/6))  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
381.92
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
194.86
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
124.71
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
280.59
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
70.15
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
498.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:38:01)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_20 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan_20)  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
digite o comprimento do lado:822.92
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
digite o comprimento do lado:419.86
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
digite o comprimento do lado:268.71
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
digite o comprimento do lado:604.59
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
digite o comprimento do lado:151.15
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
digite o comprimento do lado:1074.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:37:06)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_0.52 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan_ 0.52 )  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:37:05)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_0.52 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan_ 0.52 )  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:39:27)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_15 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan_15)  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
digite o comprimento do lado:822.92
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
digite o comprimento do lado:419.86
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
digite o comprimento do lado:268.71
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
digite o comprimento do lado:604.59
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
digite o comprimento do lado:151.15
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
digite o comprimento do lado:1074.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:35:06)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_3.14/6 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan_3.14/6) 
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 4
    tan_3.14/6 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 4
    tan_3.14/6 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 4
    tan_3.14/6 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 4
    tan_3.14/6 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 4
    tan_3.14/6 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 4
    tan_3.14/6 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:32:00)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_15 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan_15) 
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
digite o comprimento do lado:822.92
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
digite o comprimento do lado:419.86
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
digite o comprimento do lado:268.71
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
digite o comprimento do lado:604.59
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
digite o comprimento do lado:151.15
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
digite o comprimento do lado:1074.83
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:46:15)
-- CODE: 
from math import pi
from math import tan
lado = float(input())
apotema = lado/(2 * tan(pi/6))  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
127.31
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
64.95
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
41.57
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
93.53
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
23.38
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
166.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:45:03)
-- CODE: 
from math import pi
from math import tan
lado = float(input())
tan_ = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan(pi/6))  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
381.92
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
194.86
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
124.71
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
280.59
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
70.15
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
498.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 15:37:05)
-- CODE: 
from math import *

lado = float(input("digite o comprimento do lado:"))
tan_0.52 = 2 - (3**0.5)
apotema = 3 * lado/(2 * tan_ 0.52 )  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
-- ERROR:
File "XXXX", line 4
    tan_0.52 = 2 - (3**0.5)
         ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 15:46:33)
-- CODE: 
from math import pi
from math import tan
lado = float(input())
apotema = lado/(2 * tan(pi/6))  
area = 3 * lado * apotema
print(round(area, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
7
---- correct output:
127.31
---- user output:
127.31
-- TEST CASE 2:
---- input:
5
---- correct output:
64.95
---- user output:
64.95
-- TEST CASE 3:
---- input:
4
---- correct output:
41.57
---- user output:
41.57
-- TEST CASE 4:
---- input:
6
---- correct output:
93.53
---- user output:
93.53
-- TEST CASE 5:
---- input:
3
---- correct output:
23.38
---- user output:
23.38
-- TEST CASE 6:
---- input:
8
---- correct output:
166.28
---- user output:
166.28
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
